2008-06-28  Nikolas Zimmermann  <zimmermann@kde.org>

        Reviewed by Oliver.

        Update all (except four) SVG pixel tests, after a long time.
        Four tests are broken in trunk, filed bugs 19798 & 19799.

        Add all missing png/checksum files, and move files around which were misplaced.

        * platform/mac-leopard/svg/W3C-SVG-1.1/animate-elem-06-t-expected.checksum:
        * platform/mac-leopard/svg/W3C-SVG-1.1/animate-elem-06-t-expected.png:
        * platform/mac-leopard/svg/W3C-SVG-1.1/animate-elem-07-t-expected.checksum:
        * platform/mac-leopard/svg/W3C-SVG-1.1/animate-elem-07-t-expected.png:
        * platform/mac-leopard/svg/W3C-SVG-1.1/animate-elem-08-t-expected.checksum:
        * platform/mac-leopard/svg/W3C-SVG-1.1/animate-elem-08-t-expected.png:
        * platform/mac-leopard/svg/W3C-SVG-1.1/animate-elem-30-t-expected.checksum:
        * platform/mac-leopard/svg/W3C-SVG-1.1/animate-elem-30-t-expected.png:
        * platform/mac-leopard/svg/W3C-SVG-1.1/animate-elem-36-t-expected.checksum:
        * platform/mac-leopard/svg/W3C-SVG-1.1/animate-elem-36-t-expected.png:
        * platform/mac-leopard/svg/W3C-SVG-1.1/animate-elem-39-t-expected.checksum:
        * platform/mac-leopard/svg/W3C-SVG-1.1/animate-elem-39-t-expected.png:
        * platform/mac-leopard/svg/W3C-SVG-1.1/animate-elem-40-t-expected.checksum:
        * platform/mac-leopard/svg/W3C-SVG-1.1/animate-elem-40-t-expected.png:
        * platform/mac-leopard/svg/W3C-SVG-1.1/animate-elem-41-t-expected.checksum:
        * platform/mac-leopard/svg/W3C-SVG-1.1/animate-elem-41-t-expected.png:
        * platform/mac-leopard/svg/W3C-SVG-1.1/coords-viewattr-02-b-expected.checksum:
        * platform/mac-leopard/svg/W3C-SVG-1.1/coords-viewattr-02-b-expected.png:
        * platform/mac-leopard/svg/W3C-SVG-1.1/fonts-glyph-04-t-expected.checksum:
        * platform/mac-leopard/svg/W3C-SVG-1.1/fonts-glyph-04-t-expected.png: