@@ -1,3 +1,14 @@
+2008-06-28  Dan Bernstein  <mitz@apple.com>
+
+        Reviewed by Darin Adler.
+
+        - fix <rdar://problem/5994621> REGRESSION (r31090-r31114): Weather widget shows missing image icons briefly when (re)loaded
+
+        * html/HTMLImageLoader.cpp:
+        (WebCore::HTMLImageLoader::updateFromElement): Changed to not load an
+        image if the 'src' attribute is the empty string and the document's base
+        URI is a file: URL.
+
 2008-06-27  Sam Weinig  <sam@webkit.org>
 
         Reviewed by Dan Bernstein.
