@@ -1,3 +1,12 @@
+2008-06-28  Dan Bernstein  <mitz@apple.com>
+
+        Reviewed by Darin Adler.
+
+        - updated test and results for <rdar://problem/5994621> REGRESSION (r31090-r31114): Weather widget shows missing image icons briefly when (re)loaded
+
+        * fast/images/load-img-with-empty-src-expected.txt:
+        * fast/images/load-img-with-empty-src.html:
+
 2008-06-28  Nikolas Zimmermann  <zimmermann@kde.org>
 
         Reviewed by Oliver.
